--- a/main.html
+++ b/main.html
@@ -81,7 +81,7 @@
             </section> 
             <section id="cashout">
                 <h2 class="text-center text-3xl font-bold text-pink-700 mt-5">Cash Out</h2>
-                <div class="fieldset hero-content flex-col lg:flex-row-reverse flex items-center shadow-md mx-8 p-8">
+                <div class="fieldset hero-content flex-col lg:flex-row-reverse  items-center shadow-md mx-8 p-8">
                     <label class="fieldset-label">Account Number</label>
                     <input value="01301301302" id="acc-number" type="number" class="input" placeholder="Type your Account No" required/>
                     <label class="fieldset-label">Cash Out Amount</label>
